@@ -7,6 +7,7 @@
 <!ENTITY cookies_reference SYSTEM "cookies_reference.sgml">
 <!ENTITY common_modules SYSTEM "common_modules.sgml">
 <!ENTITY common_backends SYSTEM "common_backends.sgml">
+<!ENTITY custom-commands SYSTEM "custom_commands.sgml">
 <!ENTITY sitebot SYSTEM "sitebot.sgml">
 <!ENTITY programming_modules SYSTEM "programming_modules.sgml">
 <!ENTITY freebsd_notes SYSTEM "freebsd_notes.sgml">
@@ -23,6 +24,7 @@
 &cookies_reference;
 &common_modules;
 &common_backends;
+&custom-commands;
 &sitebot;
 &programming_modules;
 &freebsd_notes;
